--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         
         <link rel="stylesheet" href="style.css">
         <meta charset="utf-8">
-        <link rel="icon" type="image/x-icon" href="https://static.wikia.nocookie.net/ipod/images/6/63/Among_Us_app_icon.png/revision/latest/scale-to-width-down/612?cb=20210508205652">
+        <link rel="icon" type="image/x-icon" href="https://c.tenor.com/o9bbZuiIt0AAAAAd/amogus.gif">
         <title>I'm waffle... Meow!</title>
 
     </head>
