--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         
         <div id="div1">
         
-            <p class="text">Hi! I'm waffle, a web developer from Spain 🇪🇸. I love to play <a class="link" href="https://scoresaber.com/u/76561198452268538" target="blank">Beat Saber</a>, <a class="link" href="https://osu.ppy.sh/users/14963013" target="blank">Osu!</a>. I also like to play Minecraft and VRChat sometimes.</p>
+            <p class="text">Hi! I'm waffle, a web developer from Spain. I love to play <a class="link" href="https://scoresaber.com/u/76561198452268538" target="blank">Beat Saber</a>, <a class="link" href="https://osu.ppy.sh/users/14963013" target="blank">Osu!</a>. I also like to play Minecraft and VRChat sometimes.</p>
 
             <p class="text">Right now, I know how to code in Html, JS, css, Python and NodeJS! It's not very much, but I'm still learning.</p>
 
