--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div id="instagram">
 
             <tr>
-            <img class="imgFooter2" src="https://assets.stickpng.com/images/580b57fcd9996e24bc43c521.png">
+            <img class="imgFooter2" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/768px-Instagram_logo_2016.svg.png">
 
             <p class="textFooter2">Instagram</p>
             </tr>
