--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         
         <div id="div1">
         
-            <p class="text">Hi! I'm a web developer from Spain. I love to play <a class="link" href="https://scoresaber.com/u/76561198452268538" target="blank">Beat Saber</a>, <a class="link" href="https://osu.ppy.sh/users/14963013" target="blank">Osu!</a>... I also like to play Minecraft and VRChat sometimes.</p>
+            <p class="text">Hi! I'm a web developer from Spain. I love to play <a class="link" href="https://scoresaber.com/u/76561198452268538" target="blank">Beat Saber</a> and VRChat!</p>
 
             <a href="http://www.themostamazingwebsiteontheinternet.com/" target="blank"><img src="https://c.tenor.com/Weyin7lqYhsAAAAi/rainbowcat.gif" id="rainbowCat"></a>
 
